--- a/wiki/LibrarySections.wiki
+++ b/wiki/LibrarySections.wiki
@@ -10,6 +10,7 @@
    * [http://code.google.com/p/phpquery/wiki/Utilities Utilities]
    * [http://code.google.com/p/phpquery/wiki/PluginsCientSidePorts Plugin ports]
  * [http://code.google.com/p/phpquery/wiki/PHPSupport PHP Support]
+ * [http://code.google.com/p/phpquery/wiki/MultiDocumentSupport Multi-document support]
  * [http://code.google.com/p/phpquery/wiki/PluginsServerSide Plugins]
  * [http://code.google.com/p/phpquery/wiki/WebBrowser WebBrowser]
  * [http://code.google.com/p/phpquery/wiki/jQueryServer jQueryServer]
