--- a/wiki/LibrarySections.wiki
+++ b/wiki/LibrarySections.wiki
@@ -8,9 +8,9 @@
    * [http://code.google.com/p/phpquery/wiki/Ajax Ajax]
    * [http://code.google.com/p/phpquery/wiki/Events Events]
    * [http://code.google.com/p/phpquery/wiki/Utilities Utilities]
-   * [http://code.google.com/p/phpquery/wiki/PluginsCientSidePorts Plugin ports]
+   * [http://code.google.com/p/phpquery/wiki/PluginsClientSidePorts Plugin ports]
  * [http://code.google.com/p/phpquery/wiki/PHPSupport PHP Support]
- * [http://code.google.com/p/phpquery/wiki/MultiDocumentSupport Multi-document support]
+ * [http://code.google.com/p/phpquery/wiki/MultiDocumentSupport Multi document support]
  * [http://code.google.com/p/phpquery/wiki/PluginsServerSide Plugins]
  * [http://code.google.com/p/phpquery/wiki/WebBrowser WebBrowser]
  * [http://code.google.com/p/phpquery/wiki/jQueryServer jQueryServer]
