--- a/wiki/jQueryServer.wiki
+++ b/wiki/jQueryServer.wiki
@@ -14,4 +14,4 @@ $.server({url: 'http://somesite.com'})
       $('.destination').html(response);
 });
 }}}
-Since version *0.5.1* (this is *not* phpQuery release version number) there is a support for config file which *authorizes* Ajax hosts and referers.
+Since version *0.5.1* (this is *not* phpQuery release version number) there is a support for config file which *authorizes* [http://code.google.com/p/phpquery/wiki/Ajax Ajax] hosts and referers.
