--- a/wiki/Callbacks.wiki
+++ b/wiki/Callbacks.wiki
@@ -10,7 +10,7 @@ Callbacks are functions _called back_ by other functions in proper moment (eg on
 ==Java Script callbacks==
 In JavaScript this pattern can be very flexible due to [http://en.wikipedia.org/wiki/Closure_(computer_science) Closures] support, which can be inline (no code break) and inherits scope (no need to passing params).
 ==PHP callbacks==
-PHP has only simple [http://pl2.php.net/manual/en/function.call-user-func-array.php support for callbacks] so the case is more complicated. That's why *ParamStructures* has been introduced in phpQuery.
+PHP has only simple [http://pl2.php.net/manual/en/function.call-user-func-array.php support for callbacks] so the case is more complicated. That's why [#Param_Structures ParamStructures] has been introduced in phpQuery.
 ==Param Structures==
 ParamStructures are lists of params. Such list can contain values defined by programmer or special places where function triggering callback will fill it's own values.
 ====Example 1====
@@ -20,7 +20,7 @@ function myCallback($param1, $i, $v, $param4) {
   print "Index: $i; Value: $v";
 }
 }}}
-Example above shows how to easily pass custom params to callback using *ParamStructures*.
+Example above shows how to easily pass custom params to callback using [#Param_Structures ParamStructures].
 ==Supported Methods==
  * `phpQuery::each()`
  * `phpQuery::map()`
@@ -29,7 +29,7 @@ Example above shows how to easily pass custom params to callback using *ParamStr
 ==Scope Pseudo Inheritance==
 There is easy way to pseudo-inherit scope in PHP. [http://en.wikipedia.org/wiki/Scope_(programming) Scope] means _variables accessible in specified point of code_. It's achieved using [http://php.net/compact compact()] and [http://php.net/extract extract()] functions.
 ====Example 2====
-Look at this modified [#Example_1 example 1]:
+Look at this modified [#Example_1 example]:
 {{{
 $a = 'foo';
 $b = 'bar';
