--- a/wiki/Callbacks.wiki
+++ b/wiki/Callbacks.wiki
@@ -20,8 +20,8 @@ phpQuery::each(
   array(1,2,3),
   // second param is callback (string or array to call objects method)
   'myCallback',
-  // rest of params are [#Param_Structures ParamStructure]
-  // CallbackParam objects will be changed to $i and $v by _each_ method
+  // rest of params are ParamStructure
+  // CallbackParam objects will be changed to $i and $v by phpQuery::each method
   'param1', new CallbackParam, new CallbackParam, 'param4'
 );
 function myCallback($param1, $i, $v, $param4) {
