--- a/wiki/PHPSupport.wiki
+++ b/wiki/PHPSupport.wiki
@@ -8,8 +8,9 @@ Although *phpQuery* is *jQuery* port, there is extensive PHP-specific support.
    * [#Countable Countable Interface]
  * [http://code.google.com/p/phpquery/wiki/Callbacks Callbacks]
  * [#PHP_Code_Support PHP Code Support]
-   * [#Outputting_PHP_code Outputting PHP code]
+   * [#Opening_PHP_files_as_DOM Opening PHP files as DOM]
    * [#Inputting_PHP_code Inputting PHP code]
+   * [#Outputting_PHP_code Outputting PHP code]
 
 ==Class Interfaces==
 phpQuery implements some of [http://pl.php.net/spl Standard PHP Library (SPL)] interfaces.
@@ -41,6 +42,11 @@ print count(pq('ul:first > li'));
 ==Callbacks==
 There is a special [http://code.google.com/p/phpquery/wiki/Callbacks Callbacks] wiki section, to which you should refer to.
 ==PHP Code Support==
+====Opening PHP files as DOM====
+PHP files can be opened using *phpQuery::newDocumentPHP($markup)* or *phpQuery::newDocumentFilePHP($file)*. Such files are visible as DOM, where:
+ * PHP tags (beetween DOM elements) are available (querieble) as <php> ...code ...</php>
+ * PHP tags inside attributes are HTML entities
+ * PHP tags between DOM element's attributes are *not yet supported*
 ====Inputting PHP code====
 Additional methods allows placing PHP code inside DOM. Below each method visible is it's logic equivalent.
  * *attrPHP*($attr, $code)
@@ -67,3 +73,4 @@ Additional methods allows placing PHP code inside DOM. Below each method visible
    * [http://docs.jquery.com/Manipulation/replaceWith replaceWith]("<?php $code ?>")
 ====Outputting PHP code====
 Code inserted with methods above won't be returned as valid (runnable) using classic output methods such as *html()*. To make it work, *php()* method without parameter have to be used. Optionaly *phpQuery::markupToPHP($markup)* can activate tags in string outputed before.
+*REMEMBER* Outputing runnable code and placing it on webserver is always dangerous !
