--- a/wiki/PHPSupport.wiki
+++ b/wiki/PHPSupport.wiki
@@ -30,7 +30,7 @@ If you like writing arrays, with phpQuery you can still do it, thanks to the Arr
 $pq = phpQuery::newDocumentFile('somefile.html');
 // print first list outer HTML
 print $pq['ul:first'];
-// change INNER HTML of second direct LI element of first list
+// change INNER HTML of second LI directly in first UL
 $pq['ul:first > li:eq(1)'] = 'new inner html of second LI directly in first UL';
 // now look at the difference (outer vs inner)
 print $pq['ul:first > li:eq(1)'];
