Edited wiki page through web user interface.

--- a/wiki/Basics.wiki
+++ b/wiki/Basics.wiki
@@ -4,7 +4,7 @@ phpQuery::newDocumentFileXHTML('my-xhtml.html')->find('p');
 }}}
 =Table of Contents=
  * [#Loading_documents Loading documents]
- * [#pq()_function pq() function]
+ * [#pq_function pq() function]
 
 ==Loading documents==
  * phpQuery::*newDocument*($html, $contentType = null) Creates new document from markup. If no $contentType, autodetection is made (based on markup). If it fails, text/html in utf-8 is used.
@@ -17,6 +17,6 @@ phpQuery::newDocumentFileXHTML('my-xhtml.html')->find('p');
  * phpQuery::*newDocumentFileXHTML*($file, $charset = 'utf-8')
  * phpQuery::*newDocumentFileXML*($file, $charset = 'utf-8')
  * phpQuery::*newDocumentFilePHP*($file, $contentType) Read more about it on [http://code.google.com/p/phpquery/wiki/PHPSupport PHPSupport page]
-==pq() function==
+==pq function==
 // TODO
 *pq*($param, $context = null)
