--- a/wiki/LibrarySections.wiki
+++ b/wiki/LibrarySections.wiki
@@ -13,5 +13,6 @@
  # [http://code.google.com/p/phpquery/wiki/PHPSupport PHP Support]
  # [http://code.google.com/p/phpquery/wiki/MultiDocumentSupport Multi document support]
  # [http://code.google.com/p/phpquery/wiki/PluginsServerSide Plugins]
- # [http://code.google.com/p/phpquery/wiki/WebBrowser WebBrowser]
+   # [http://code.google.com/p/phpquery/wiki/WebBrowser WebBrowser]
+   # [http://code.google.com/p/phpquery/wiki/ScriptsPlugin Scripts]
  # [http://code.google.com/p/phpquery/wiki/jQueryServer jQueryServer]
