--- a/wiki/jQueryHelpers.wiki
+++ b/wiki/jQueryHelpers.wiki
@@ -1,3 +1,3 @@
 jQuery helper libraries written in PHP
- * [http://code.google.com/p/jquery-php/ jquery-php[
+ * [http://code.google.com/p/jquery-php/ jquery-php]
  * [http://www.ngcoders.com/php/pquery-php-and-jquery pQuery]
