--- a/wiki/ScriptsPlugin.wiki
+++ b/wiki/ScriptsPlugin.wiki
@@ -1,3 +1,4 @@
+#labels Plugin
 ScriptsPlugin simplifies writing short code scripts which can be easily reused (chained). It removes plugin overhead allowing script to be one-line command.
 
 ==Using scripts==
