--- a/wiki/PluginsServerSide.wiki
+++ b/wiki/PluginsServerSide.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 ==Using plugins==
 Plugins are loaded using *plugin* method from phpQueryObject or phpQuery static namespace.
 {{{
