Edited wiki page through web user interface.

--- a/wiki/CommandLineInterface.wiki
+++ b/wiki/CommandLineInterface.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 phpQuery features CommandLineInterface aka CLI.
 {{{
 Usage: phpquery URL --method1 arg1 arg2 argN --method2 arg1 arg2 argN ...
