--- a/wiki/Debugging.wiki
+++ b/wiki/Debugging.wiki
@@ -1,5 +1,5 @@
 {{{
-To see a debugging messages, use this
+// To see a debugging messages, use this
 phpQuery::$debug = 1;
 // for debugging document loading (newDocument())
 phpQuery::$debug = 2;
