Edited wiki page through web user interface.

--- a/wiki/jQueryDifferences.wiki
+++ b/wiki/jQueryDifferences.wiki
@@ -1,2 +1,2 @@
 #labels Deprecated
-Renamed to jQueryPortingState.
+Renamed to [http://code.google.com/p/phpquery/wiki/jQueryPortingState jQueryPortingState].
